--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -35,9 +35,9 @@
 % \emailAdd{first@one.univ}
 
 
-\abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of the neutrino physics community. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. 
+\abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of neutrino physics. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. 
 %The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino energy of about 0.7 GeV. 
-We discuss a technique of measuring a charged particle's momentum by means of multiple coulomb scattering (MCS) in the MicroBooNE LArTPC, which does not require the full particle ionization track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). We provide motivation for why this technique is important, and quantify its performance on fully contained beam-neutrino-induced muon tracks both in simulation and in data. In general we find agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 12\% for the shortest (one meter long) tracks to nearly 5\% for longer (several meter) tracks.}
+We discuss a technique for measuring a charged particle's momentum by means of multiple coulomb scattering (MCS) in the MicroBooNE LArTPC, which does not require the full particle ionization track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). We provide motivation for why this technique is important, and quantify its performance on fully contained beam-neutrino-induced muon tracks both in simulation and in data. In general we find agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, decreasing from about 12\% for the shortest (one meter long) tracks to nearly 5\% for longer (several meter) tracks.}
 
 
 % \keywords{Only keywords from JINST's keywords list please}
@@ -69,17 +69,17 @@ MicroBooNE (Micro Booster Neutrino Experiment) is an experiment based at the Fer
 
 \begin{figure}[ht!]
 \centering
-	\includegraphics[width=0.7\textwidth]{Figures/static_figs/detector2.png} \\
+	\includegraphics[width=0.9\textwidth]{Figures/static_figs/detector2.png} \\
 \caption{\textit{A diagram of the time projection chamber of the MicroBooNE detector \cite{lartpc}.}}\label{detector_fig}
 \end{figure}
 
-The MicroBooNE detector is currently the largest LArTPC in the United States. It consists of a rectangular time projection chamber (TPC) with dimensions 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located 470 m away from the Booster Neutrino Beam (BNB) target. LArTPCs allow for precise three-dimensional reconstruction of particle interactions. The $x-$ direction of the TPC corresponds to the drift coordinate, the $y-$ direction is the vertical direction, and the $z-$ direction is the direction along the beam. The amount of active liquid argon in the MicroBooNE TPC is 89 tons, with the total cryostat containing 170 tons of liquid argon.\\
+The MicroBooNE detector\cite{ub_detectorpaper} consists of a rectangular time projection chamber (TPC) with dimensions 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located 470 m away from the Booster Neutrino Beam (BNB) target. LArTPCs allow for precise three-dimensional reconstruction of particle interactions. The $x-$ direction of the TPC corresponds to the drift coordinate, the $y-$ direction is the vertical direction, and the $z-$ direction is the direction along the beam. The mass of active liquid argon in the MicroBooNE TPC is 89 tons, with the total cryostat containing 170 tons of liquid argon.\\
 
-Photomultiplier tubes (PMTs) and three wire planes with 3mm spacing at angles of 0, and $\pm$ 60 degrees with respect to the vertical are located in the TPC to aid with event reconstruction (Figure \ref{detector_fig}). In a neutrino interaction, a neutrino from the beam interacts with the argon and the charged outgoing child particles traverse the medium, losing energy and leaving an ionization trail. The resulting ionization electrons drift to the anode side of the TPC, containing the wire planes. The movement of electrons induces a current in the wires, which is used to create three distinct two-dimensional views of the event. Combining these wire signals with timing information from the PMTs allows for full three-dimensional reconstruction of the event.\\
+A set of 32 photomultiplier tubes (PMTs) and three wire planes with 3 mm spacing at angles of 0, and $\pm$ 60 degrees with respect to the vertical are located in the TPC for event reconstruction (Figure \ref{detector_fig}). In a neutrino interaction, a neutrino from the beam interacts with an argon nucleus and the charged outgoing secondary particles traverse the medium, losing energy and leaving an ionization trail. The resulting ionization electrons drift to the anode side of the TPC, containing the wire planes. The passage of these electrons near the first two wire planes induces a signal in them and their collection on the third plane also generates a signal. These signals are used to create three distinct two-dimensional views (in terms of wire and time) of the event. Combining these wire signals with timing information from the PMTs allows for full three-dimensional reconstruction of the event.\\
 
-The Booster Neutrino Beam (BNB) is predominantly composed of muon neutrinos ($\nu_\mu$) with a peak neutrino energy of about 0.7 GeV, which can undergo charge-current ($\nu_\mu$CC) interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate the momentum with a measurement of the length of the particle's track, or with calorimetric measurements. Around half of muons from BNB neutrino events in MicroBooNE are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of an outgoing three-dimensional track is by means of multiple coulomb scattering (MCS). \\
+The Booster Neutrino Beam (BNB) is predominantly composed of muon neutrinos ($\nu_\mu$) with a peak neutrino energy of about 0.7 GeV, which can undergo charge-current ($\nu_\mu$CC) interactions in the TPC and produce muons. For muon tracks that are completely contained in the TPC, it is straightforward to calculate their momentum with a measurement of the length of the particle's track, or with calorimetric measurements which come from wire signal measurements. However, around half of muons from BNB neutrino events in MicroBooNE are not fully contained in the TPC, and therefore using length-based calculations for these uncontained tracks is not a possibility. The only way to compute the energy of a non-contained three-dimensional track is by means of multiple coulomb scattering (MCS). \\
 
-The phenomenon of multiple coulomb scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the scatters of a track-like particle (in terms of angular deflection relative to the track direction) form a gaussian distribution centered at zero with a standard deviation given by the Highland formula \cite{highland}: 
+Multiple Coulomb Scattering (MCS) occurs when a charged particle enters a medium and undergoes electromagnetic scattering with the atomic nuclei. This scattering deviates the original trajectory of the particle within the material (Figure \ref{mcs_nocap_fig}). For a given energy, the angular deflection scatters of a particle in either the $x'$ direction or $y'$ direction (as indicated in the aforementioned figure) form a gaussian distribution centered at zero with a width, $\sigma_o^{HL}$ given by the Highland formula \cite{highland}: 
 
 \begin{equation}\label{highland_eqtn}
 	\sigma_o^{HL}=\frac{13.6\  \text{MeV}}{p\beta c}z\sqrt{\frac{\ell}{X_0}}\Big[1+0.0038\text{ln}\Big(\frac{\ell}{X_0}\Big)\Big]
@@ -92,12 +92,12 @@ The phenomenon of multiple coulomb scattering (MCS) occurs when a charged partic
 where the formula is ``modified'' from the original Highland formula (Equation \ref{highland_eqtn}) in that it includes a detector-inherent angular resolution term, $\sigma_o^{res}$. For this analysis, this term is given a fixed value of 2 mrad which has been determined to be an acceptable value based on simulation studies.\\
 
 
-With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric information. The method by which this is done is described in detail in Section \ref{MCS_technique_section} and was originally described for use in a LArTPC on atmospheric muons by the ICARUS collaboration\cite{icarus_mcs_paper}.
+With the Highland formula, the momentum of a track-like particle can be determined using only the 3D reconstructed track it produces in the detector, without any calorimetric or track range information. The method by which this is done is described in detail in Section \ref{MCS_technique_section} and was originally described for use in a LArTPC on atmospheric muons by the ICARUS collaboration\cite{icarus_mcs_paper}.
 
 \begin{figure}[ht!]
 \centering
-	\includegraphics[width=0.7\textwidth]{Figures/static_figs/mcs_nocap.png} \\
-\caption{\textit{The particle's trajectory is deflected as it traverses through the material [XXX need formal citation here, need to ask Leonidas where he got it].}}\label{mcs_nocap_fig}
+	\includegraphics[width=0.9\textwidth]{Figures/static_figs/mcs_nocap.png} \\
+\caption{\textit{The particle's trajectory is deflected as it traverses through the material.}}\label{mcs_nocap_fig}
 \end{figure}
 
 
@@ -155,7 +155,7 @@ Each of these steps are discussed in detail in the following subsections.\\
 % Also input to the track segmentation routine is the desired segment length, which is a tunable parameter. In this note, segment lengths are always taken to be 10 cm (based on the findings of Appendix \ref{SegmentLength_MCBNBRecoTrack_section}) except where otherwise explicitly stated. 
 Track segmentation refers to the subdivision of three-dimensional reconstructed trajectory points of a reconstructed track into portions of definite length. In this analysis, the tracks are automatically reconstructed by the ``pandoraNuPMA" projection matching algorithm which constructs the three-dimensional trajectory points by combining two-dimensional hits reconstructed from signals on the different wire planes along with timing information from the photomultiplier tubes to reconstruct the third dimension\cite{Marshall:2015rfa}. The segmentation routine begins at the start of the track, and iterates through the trajectory points in order, defining segment start and stop points based on the straight-line distance between them. There is no overlap between segments. Given the subset of the three-dimensional trajectory points that correspond to one segment of the track, a three-dimensional linear fit is applied to the data points, weighing all trajectory points equally in the fit. In this analysis, a segment length of 10 cm is used, which is a tunable parameter that has been optimized based on simulation studies.\\
 
-With the segments defined, the scattering angles between adjacent segments are computed. A coordinate transformation is performed such that the $z'$ direction is oriented along the direction of the first of the segment pair. The $x'$ and $y'$ are then defined such that all of $x'$, $y'$, and $z'$ are mutually orthogonal, as shown in Figure \ref{mcs_nocap_fig}. The scattering angles both in the $x'$ and $y'$ planes are then computed to be used by the MCS algorithm. Note that only the scattering angle in the $x'$ plane is drawn in Figure \ref{mcs_nocap_fig}.
+With the segments defined, the scattering angles between adjacent segments are computed. A coordinate transformation is performed such that the $z'$ direction is oriented along the direction of the first of the segment pair. The $x'$ and $y'$ coordinates are then defined such that all of $x'$, $y'$, and $z'$ are mutually orthogonal, as shown in Figure \ref{mcs_nocap_fig}. The scattering angles both with respect to the $x'$ direction and the $y'$ direction are then computed to be used by the MCS algorithm. Note that only the scattering angle with respect to the $x'$ direction is drawn in Figure \ref{mcs_nocap_fig}.
 
 
 
@@ -176,12 +176,12 @@ With the segments defined, the scattering angles between adjacent segments are c
 
 \subsection{Maximum Likelihood Theory}\label{likelihood_theory_section}
 
-The normal probability distribution for the scattering angle in either the $x'$ or $y'$ direction, $\Delta\theta$ with an expected gaussian error $\sigma_o$ and mean $\mu_o$ is given by:
+The normal probability distribution for the scattering angle in either the $x'$ or $y'$ direction, $\Delta\theta$ with an expected gaussian error $\sigma_o$ and mean of zero is given by:
 \begin{equation}
-f_X(\Delta\theta) = (2\pi\sigma_o^2)^{-\frac{1}{2}}exp(-\frac{1}{2}\frac{(\Delta\theta-\mu_o)^2}{\sigma_o^2})
+f_X(\Delta\theta) = (2\pi\sigma_o^2)^{-\frac{1}{2}}exp(-\frac{1}{2}(\frac{\Delta\theta}{\sigma_o})^2)
 \end{equation}
 
-Here, $\mu_o$ is assumed to be zero, and $\sigma_o$ is the RMS angular deflection computed by the modified Highland formula (Equation \ref{modified_highland_eqtn}), which is a function of both the momentum and the length of that segment. Since energy is lost between segments along the track, $\sigma_o$ increases for each angular measurement along the track so we replace $\sigma_o$ with $\sigma_{o,j}$, where $j$ is an index representative of the segment. \newline
+Here, $\sigma_o$ is the RMS angular deflection computed by the modified Highland formula (Equation \ref{modified_highland_eqtn}), which is a function of both the momentum and the length of that segment. Since energy is lost between segments along the track, $\sigma_o$ increases for each angular measurement along the track so we replace $\sigma_o$ with $\sigma_{o,j}$, where $j$ is an index representative of the segment. \newline
 
 To get the likelihood, one takes the product of $f_X(\Delta\theta_j)$ over all $n$ of the $\Delta\theta_j$ segment-to-segment scatters along the track. With some manipulation, this product becomes
 \begin{equation}
@@ -212,13 +212,13 @@ In practice, rather than maximizing likelihood it is often more computationally 
 
 \subsection{Maximum Likelihood Implementation}\label{maximum_likelihood_section}
 
-Given a set of angular deflections in the $x'$ and $y'$ planes for each segment as described in Section \ref{track_segmentation_and_scattering_angle_computation_section} a raster scan over postulated track momenta in steps of 1 MeV up to 7.5 GeV is computed and the step with the smallest negative log likelihood (Equation \ref{leo_llhd_eqtn}) is chosen as the final MCS momentum, with the minimum allowable momentum being the range-based momentum (see Section \ref{Range_Energy_Validation_section} for validation that using range-based momentum in this way is valid). Note that Equation \ref{leo_llhd_eqtn} includes a $\sigma_{o,j}$ term which changes for each consecutive segment because their energies are decreasing. The energy of the $j$th segment is given by
+Given a set of angular deflections in the $x'$ and $y'$ directions for each segment as described in Section \ref{track_segmentation_and_scattering_angle_computation_section} a raster scan over postulated track momenta in steps of 1 MeV up to 7.5 GeV is computed and the step with the smallest negative log likelihood (Equation \ref{leo_llhd_eqtn}) is chosen as the final MCS momentum. Note that Equation \ref{leo_llhd_eqtn} includes a $\sigma_{o,j}$ term which changes for each consecutive segment because their energies are decreasing. The energy of the $j$th segment is given by
 
 \begin{equation}\label{segment_E_equation}
 E_{j} = E_t - k_{cal}*N_{upstream}*l_{seg}
 \end{equation}
 
-where $k_{cal}$ is the minimally ionizing energy constant taken to be $2.105 \frac{MeV}{cm}$ in liquid argon\cite{MIPenergysource}, $N_{upstream}$ is the number of segments upstream of this particular segment, and $l_{seg}$ is the segmentation length. This definition of $E_j$ therefore takes into account energy loss along the track. This value of segment energy is converted to a momentum, $p$, with the usual energy-momentum relation, assuming the muon mass, and is then used to predict the RMS angular scatter for that segment ($\sigma_o$) by way of Equation \ref{modified_highland_eqtn}.
+where $k_{cal}$ is the minimally ionizing energy constant taken to be $2.105 \frac{MeV}{cm}$ in liquid argon\cite{MIPenergysource}, $N_{upstream}$ is the number of segments upstream of the $j$th segment, and $l_{seg}$ is the 3D segment length. This definition of $E_j$ therefore takes into account energy loss along the track. Note that Equation \ref{segment_E_equation} introduces a minimum allowable track energy determined by the length of the track, as $E_{j}$ must remain positive. This value of segment energy is converted to a momentum, $p$, with the usual energy-momentum relation, assuming the muon mass, and is then used to predict the RMS angular scatter for that segment ($\sigma_o$) by way of Equation \ref{modified_highland_eqtn}. 
 
 
 
@@ -238,16 +238,16 @@ where $k_{cal}$ is the minimally ionizing energy constant taken to be $2.105 \fr
 
 
 
-\section{Range-based Energy Validation}\label{Range_Energy_Validation_section}
-In order to quantify the performance of the MCS energy estimation method on fully contained muons in data, an additional handle on energy is needed. Here, range-based energy is used. The stopping power of muons in liquid argon is well described by the particle data group\cite{PDG_spline_table}. By using a linear interpolation between points in the cited PDG stopping power table, the start-to-end straight-line length of a track can be used to reconstruct the muon's total energy with good accuracy. A simulated sample of fully contained BNB neutrino-induced muons longer than one meter is used to quantify the bias and resolution for the range-based energy estimation technique. The range is defined as the straight-line distance between the true starting point and true stopping point of the muon. The bias and resolution are computed in bins of true total energy of the muons by fitting a gaussian to a distribution of the fractional energy difference ($\frac{E_{Range}-E_{True}}{E_{True}}$) in each bin. The mean of each gaussian indicates the bias for that true energy bin, and the width indicates the resolution. Figure \ref{true_range_bias_resolution_MCTrack_fig} shows the bias and resolution for the range-based energy reconstruction method. It can be seen that the bias is negligible and the resolution for this method of energy reconstruction is on the order of 2-4\%. Based on this figure, it is clear that range-based energy (and therefore range-based momentum) is a good handle on the true energy (momentum) of a reconstructed muon track in data, assuming that track is well reconstructed in terms of length.
+\section{Range-based Energy Validation from Simulation}\label{Range_Energy_Validation_section}
+In order to quantify the performance of the MCS energy estimation method on fully contained muons in data, an additional handle on energy is needed. Here, range-based energy is used. The stopping power of muons in liquid argon is well described by the particle data group (PDG)\cite{PDG_spline_table}. By using a linear interpolation between points in the cited PDG stopping power table, the start-to-end straight-line length of a track can be used to reconstruct the muon's total energy with good accuracy. A simulated sample of fully contained BNB neutrino-induced muons longer than one meter is used to quantify the bias and resolution for the range-based energy estimation technique. The range is defined as the straight-line distance between the true starting point and true stopping point of a muon. The bias and resolution are computed in bins of true total energy of the muons by fitting a gaussian to a distribution of the fractional energy difference ($\frac{E_{Range}-E_{True}}{E_{True}}$) in each bin. The mean of each gaussian indicates the bias for that true energy bin, and the width indicates the resolution. Figure \ref{true_range_bias_resolution_MCTrack_fig} shows the bias and resolution for the range-based energy reconstruction method. It can be seen that the bias is negligible and the resolution for this method of energy reconstruction is on the order of 2-4\%. Based on this figure, it is clear that range-based energy (and therefore range-based momentum) is a good handle on the true energy (momentum) of a reconstructed muon track in data, assuming that the track is well reconstructed in terms of length.
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]
+\includegraphics[width=0.7\textwidth]
 	{Figures/true_range_bias_MCBNBMCTrack.png}
-\includegraphics[width=0.45\textwidth]
+\includegraphics[width=0.7\textwidth]
 	{Figures/true_range_resolution_MCBNBMCTrack.png}
-\caption{\textit{Range-based energy fractional bias (left) and resolution (right) from a sample of simulated fully contained BNB neutrino-induced muons using true starting and stopping positions of the track. The bias is less than 1\% and the resolution is below $\approx$4\%.}}
+\caption{\textit{Range-based energy fractional bias (top) and resolution (bottom) from a sample of simulated fully contained BNB neutrino-induced muons using true starting and stopping positions of the track. The bias is less than 1\% and the resolution is below $\approx$4\%.}}
 \label{true_range_bias_resolution_MCTrack_fig}
 \end{figure}
 
@@ -259,21 +259,30 @@ In order to quantify the performance of the MCS energy estimation method on full
 \section{MCS Performance on Beam Neutrino-Induced Muons in MicroBooNE Data}\label{data_performance_section}
 
 \subsection{Input Sample}
-The input sample to this portion of the analysis is roughly 5e19 protons-on-target worth of triggered BNB neutrino interactions in MicroBooNE data, which is a small subset of the nominal amount of beam scheduled to be delivered to the detector. These events are run through a fully automated reconstruction chain which produces reconstructed objects including three-dimensional neutrino interaction points (vertices), three-dimensional tracks for each outgoing child particle from the interaction, and PMT-reconstructed optical flashes from the interaction scintillation light. The fiducial volume used in this analysis is defined as the full TPC volume reduced in by 20 cm from both the cathode plane and the anode wire planes, shifted in 26.5 cm in from both the top and bottom walls of the TPC, shifted in 20 cm from the beam-upstream wall of the TPC, and shifted in 36.8 cm from the beam-downstream wall of the TPC.
+The input sample to this portion of the analysis is $\sim$5e19 protons-on-target worth of triggered BNB neutrino interactions in MicroBooNE data, which is a small subset of the nominal amount of beam scheduled to be delivered to the detector. These events are run through a fully automated reconstruction chain which produces reconstructed objects including three-dimensional neutrino interaction points (vertices), three-dimensional tracks for each outgoing secondary particle from the interaction, and PMT-reconstructed optical flashes from the interaction scintillation light. The fiducial volume used in this analysis is defined as the full TPC volume reduced by 20 cm from both the cathode plane and the anode wire planes, by 26.5 cm from both the top and bottom walls of the TPC, by 20 cm from the beam-upstream wall of the TPC, and by 36.8 cm from the beam-downstream wall of the TPC.
 
 \subsection{Event Selection}
 The following selection cuts are placed on the aforementioned reconstructed objects to select $\nu_\mu$ charged-current interactions in which the muon track exiting the interaction vertex is fully contained within the fiducial volume:
 \begin{enumerate}
 \item The event must have at least one bright optical flash in coincidence with the expected BNB neutrino arrival time.
 \item Two or more reconstructed tracks must originate from the same reconstructed vertex within the fiducial volume.
-\item The position of the track must be reasonably close to the position of the optical flash.
-\item For events with exactly two tracks originating from the vertex, additional calorimetric-based cuts are applied to mitigate backgrounds from in-time cosmics which produce Michel electrons that get reconstructed as a track.
+\item The span in $z-$ of the track must be within 70 cm of the $z-$ position of the optical flash as determined by the pulse height and timing of signals in the 32 PMTs.
+\item For events with exactly two tracks originating from the vertex, additional calorimetric-based cuts are applied to mitigate backgrounds from in-time cosmics which produce Michel electrons that are reconstructed as a track.
 \item The longest track originating from the vertex is assumed to be a muon, and it must be fully contained within the fiducial volume.
-\item The longest track must be at least one meter long, in order to have enough sampling points in the MCS likelihood to get a reasonable estimate of its momentum.
+\item The longest track must be at least one meter long, in order to have enough sampling points in the MCS likelihood to obtain a reasonable estimate of its momentum.
 \end{enumerate}
 
-In this sample of MicroBooNE data, 598 events (tracks) remain after all event selection cuts. Each of these events (tracks) were scanned by hand with a 2D interactive event display showing the raw wire signals of the interaction from each wire plane, with the 2D projection of the reconstructed muon track and vertex overlaid. The scanning was to ensure the track was well reconstructed (it started close to the reconstructed vertex and ended close to the end of the visible wire-signal track in all three planes). Additionally the scanning was to remove obvious mis-identification (MID) topologies such as cosmic rays inducing Michel electrons at the reconstructed neutrino vertex which were not successfully removed by the automated event selection cuts. After rejecting events (tracks) based on hand scanning, 396 tracks remain for analysis.
+In this sample of MicroBooNE data, 598 events (tracks) remain after all event selection cuts. Each of these events (tracks) were scanned by hand with a 2D interactive event display showing the raw wire signals of the interaction from each wire plane, with the 2D projection of the reconstructed muon track and vertex overlaid. The scanning was done to ensure the track was well reconstructed with start point close to the reconstructed vertex and end point close to the end of the visible wire-signal track in all three planes. Additionally the scanning was to remove obvious mis-identification (MID) topologies such as cosmic rays inducing Michel electrons at the reconstructed neutrino vertex which were not successfully removed by the automated event selection cuts. After rejecting events (tracks) based on hand scanning, 396 tracks remain for analysis.
 
+
+\subsection{Highland Validation}\label{highland_validation_section}
+The Highland formula indicates that histogram of track segment-by-segment angular deviations in both the $x'$ and $y'$ directions divided by the width predicted from the Highland equation $\sigma_o^{HL}$ (Equation \ref{highland_eqtn}) should be gaussian with a width of unity. In order to calculate the momentum $p$ in the Highland equation, $p$ for each segment is computed with Equation \ref{segment_E_equation} where $E_t$ comes from the converged MCS computed momentum of the track. For each consecutive pair of segments in this sample of 396 tracks, the angular scatter in milliradians divided by the Highland expected RMS in millradians is an entry in the area-normalized histogram shown in Figure \ref{Highland_validation_fig}. From this figure we can see that the basis of the MCS technique is validated.
+
+\begin{figure}[ht!]
+\centering
+	\includegraphics[width=0.7\textwidth]{Figures/Highland_validation_DataBNBSelectedRecoTrack_goodscan.png} \\
+\caption{\textit{Segment-to-segment measured angular scatters in both the $x'$ and $y'$ directions divided by the Highland formula (Equation \ref{highland_eqtn}) predicted width $\sigma_o^{HL}$ for the automatically selected beam neutrino-induced fully contained muon sample in MicroBooNE data after hand scanning to remove poorly reconstructed tracks and obvious mis-identification (MID) topologies. A gaussian distribution with a width of unity indicates that the basis of the MCS technique is validated.}}\label{Highland_validation_fig}
+\end{figure}
 
 
 \subsection{MCS Momentum Validation}\label{MCS_Momentum_Validation_DataRecoTrack_section}
@@ -292,14 +301,14 @@ The MCS momentum versus range-based momentum for this sample of 396 tracks can b
 
 
 
-The MCS momentum fractional bias and resolution as a function of range-based momentum for this sample of 396 tracks is shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. In order to compute this bias and resolution, distributions of fractional inverse momentum difference ($\frac{p_{MCS}^{-1} - p_{Range}^{-1}}{p_{Range}^{-1}}$) in bins of range-based momentum $p_{Range}$ are fit to gaussians and the mean of the fit determines the bias while the width of the fit determines the resolution for that bin. Inverse momentum is used here because the binned distributions are more gaussian, and therefore using the resulting fit parameters is more valid. Note that simply using the mean and RMS of the binned distributions yields similar results. Also shown in this figure are the bias and resolutions for an analogous simulated sample consisting of full BNB simulation with CORSIKA-generated\cite{corsika_ref} cosmic overlays passed through an identical reconstruction and event selection chain. Rather than hand scanning this sample, truth-based information was used by requiring the longest reconstructed track matched well in terms of true starting and stopping point of the $\nu_\mu$CC muon.\\
+The MCS momentum fractional bias and resolution as a function of range-based momentum for this sample of 396 tracks is shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. In order to compute this bias and resolution, distributions of fractional inverse momentum difference ($\frac{p_{MCS}^{-1} - p_{Range}^{-1}}{p_{Range}^{-1}}$) in bins of range-based momentum $p_{Range}$ are fit to gaussians and the mean of the fit determines the bias while the width of the fit determines the resolution for that bin. Inverse momentum is used here because the binned distributions are more gaussian, and therefore using the resulting fit parameters is more valid. Note that simply using the mean and RMS of the binned distributions yields similar results. Also shown in this figure are the bias and resolutions for an analogous simulated sample consisting of full BNB simulation with CORSIKA-generated\cite{corsika_ref} cosmic overlays passed through an identical reconstruction and event selection chain. Rather than hand scanning this sample, truth-based information was used by requiring the longest reconstructed track matched well in terms of true starting and stopping point of the $\nu_\mu$CC muon. These resolutions on the order of 10\% are consistent with the monte-carlo Kalman filter results presented by the ICARUS collaboration in this momentum range\cite{icarus_mcs_paper}.\\
 
 
 \begin{figure}
 \centering
-	\includegraphics[width=0.45\textwidth]{Figures/MCS_range_bias_multiplesamples_publicplot.png}
-	\includegraphics[width=0.45\textwidth]{Figures/MCS_range_resolution_multiplesamples_publicplot.png}
-\caption{\textit{MCS momentum fractional bias (left) and resolution (right) for automatically selected contained $\nu_\mu$CC-induced muons from full simulated BNB events with cosmic overlay where the track matches with the true muon track (blue), and automatically selected contained $\nu_\mu$CC-induced muons from MicroBooNE data where the track is deemed well-reconstructed and likely-muon from hand scanning (green).}}\label{MCS_range_bias_resolution_DataRecoTrack_fig}
+	\includegraphics[width=0.7\textwidth]{Figures/MCS_range_bias_multiplesamples_publicplot.png}
+	\includegraphics[width=0.7\textwidth]{Figures/MCS_range_resolution_multiplesamples_publicplot.png}
+\caption{\textit{MCS momentum fractional bias (top) and resolution (bottom) for automatically selected contained $\nu_\mu$CC-induced muons from full simulated BNB events with cosmic overlay where the track matches with the true muon track (blue), and automatically selected contained $\nu_\mu$CC-induced muons from MicroBooNE data where the track is deemed well-reconstructed and likely-muon from hand scanning (green).}}\label{MCS_range_bias_resolution_DataRecoTrack_fig}
 \end{figure}
 
 This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 11\% (9\%) for contained reconstructed tracks in data (simulation) with range momentum around 0.45 GeV (which corresponds to a length of about 1.5 meters) to about 5\% (6\%) for contained reconstructed tracks in data (simulation) with range momentum about 1.15 GeV (which corresponds to a length of about 4.6 meters). In general bias and resolutions agree between data and simulation within uncertainty, with resolution slightly worse in data which can be attributed to the inefficiencies involved in hand scanning compared to the truth-based matching cut in simulation.
@@ -354,6 +363,12 @@ We have described the multiple coulomb scattering technique maximum likelihood m
   %%CITATION = doi:10.1103/PhysRevLett.110.161801;%%
   %384 citations counted in    
 
+  \bibitem{ub_detectorpaper}
+  R. Acciarri {\it et al.}
+  [MicroBooNE Collaboration],
+  Design and Construction of the MicroBooNE Detector,
+  \url{http://microboone-docdb.fnal.gov:8080/cgi-bin/RetrieveFile?docid=5752&filename=MicroBooNE_DetectorPaper_Version4.0.pdf&version=3}
+
   %2
   \bibitem{lartpc}
   S. ~Lockwitz, 
@@ -400,8 +415,8 @@ We have described the multiple coulomb scattering technique maximum likelihood m
 
   %8
   \bibitem{MIPenergysource}
-  D. E. Groom, N. V. Mokhov and S. Striganov, ``Muon Stopping Power and Range Tables: 10 MeV - 100 TeV'' Table 5
-  \url{http://pdg.lbl.gov/2012/AtomicNuclearProperties/adndt.pdf}
+  D. E. Groom, N. V. Mokhov and S. Striganov, ``Muon Stopping Power and Range Tables: 10 MeV - 100 TeV'' Table 5,
+  http://pdg.lbl.gov/2012/AtomicNuclearProperties/adndt.pdf
 
 
   %9
